[tool.poetry]
name = "pycoloram"
version = "1.0.0"
description = "color(\"Text\").Red()"
authors = ["amfili  <amfili.com@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^1.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
