[tool.poetry]
name = "pycoloram"
version = "1.0.0"
description = "color(\"Text\").Red()"
authors = ["amfili  <amfili.com@gmail.com>"]
license = "MIT"
repository = "https://github.com/amfili/pycoloram"
homepage = "https://github.com/amfili/pycoloram"

[tool.poetry.dependencies]
python = "^3.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
